# champr-ql-rs

./: . dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  REDME.md  error.json
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/migrations/2023-11-13-151716_create_builds/: up.sql
crates/db/migrations/2023-11-14-011540_create_sources/: down.sql  up.sql
crates/db/migrations/2023-12-24-124510_create_logs/: down.sql  up.sql
crates/db/src/: lib.rs  models.rs  schema.rs
crates/quicklook-rs/: Cargo.toml
crates/quicklook-rs/src/: api.rs  config.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  errors.rs  handler.rs  main.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
docker/: Dockerfile  docker-compose.pg.yml  docker-compose.server.yml  docker-compose.yml  rename.sh
src/: api.rs  config.rs  errors.rs  main.rs
