[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
service = { path = "../service" }
db = { path = "../db" }
kv-log-macro = "1.0.7"
femme = "2.2.1"
