[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
diesel = { version = "2.1.3", features = ["serde_json"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
