[package]
name = "quicklook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.1", features = ["trace"] }
ureq = { version = "2.7.1", features = ["json"] }
