[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quicklook-server"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
axum = { version = "0.6.20", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.1", features = ["trace"] }
ureq = { version = "2.7.1", features = ["json"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
anyhow = "1.0.75"
serde_derive = "1.0.193"
