[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
