[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
flate2 = "1.0.28"
futures = "0.3.29"
kv-log-macro = "1.0.7"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
tar = "0.4.40"
tokio = { version = "1.34.0", features = ["full"] }
